--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   twilio_phone_verify: ^2.0.0
   pin_code_fields: ^7.4.0
   http: ^0.13.4
+  image_picker: ^0.8.5+3
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   provider: ^6.0.3
