--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,17 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>
+To take user profile image.
+	</string>
+	<key>NSCameraUsageDescription</key>
+	<string>
+To choose user profile image.
+	</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>
+used to capture audio for use.
+	</string>
 </dict>
 </plist>
