--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   pin_code_fields: ^7.4.0
   http: ^0.13.4
   image_picker: ^0.8.5+3
+  firebase_storage: ^10.3.4
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   provider: ^6.0.3
