--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   hive_flutter: ^1.1.0
   provider: ^6.0.3
   intl: ^0.17.0
+  hexcolor: ^2.0.7
+  intl_phone_number_input: ^0.7.0+2
 
 dev_dependencies:
   flutter_test:
