--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   provider: ^6.0.3
   intl: ^0.17.0
   hexcolor: ^2.0.7
-  intl_phone_number_input: ^0.7.0+2
+  intl_phone_field: ^3.1.0
 
 dev_dependencies:
   flutter_test:
