--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   intl: ^0.17.0
   hexcolor: ^2.0.7
   intl_phone_field: ^3.1.0
+  google_sign_in: ^5.4.1
 
 dev_dependencies:
   flutter_test:
