--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   hexcolor: ^2.0.7
   intl_phone_field: ^3.1.0
   google_sign_in: ^5.4.1
+  cashfree_pg: ^2.0.12+32
+  lottie: ^1.4.2
 
 dev_dependencies:
   flutter_test:
