--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,11 @@
         android:icon="@mipmap/ic_launcher"
         tools:node="merge">
 
+          <meta-data
+
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+
+            android:value="ca-app-pub-3940256099942544/1033173712"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
