--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   google_sign_in: ^5.4.1
   cashfree_pg: ^2.0.12+32
   lottie: ^1.4.2
+  google_mobile_ads: ^2.0.1
 
 dev_dependencies:
   flutter_test:
