--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
             android:name="com.google.android.gms.ads.APPLICATION_ID"
 
-            android:value="ca-app-pub-3940256099942544/1033173712"/>
+            android:value="ca-app-pub-3940256099942544~3347511713"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
